Fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html, body {
 }
 
 body {
+    position: relative;
     height: 100vh;
     width: 100vw;
 }
